Docker image updates to minimize resource requirements